[project]
name = "audio-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "numpy>=2.4.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "streamlit>=1.55.0",
    "openai",
    "python-dotenv",
]
